--- a/document/数据库设计.md
+++ b/document/数据库设计.md
@@ -1,39 +1,41 @@
+# 数据库设计
+
 ```sql
 create datebase git;
 create table git_index
 (
-	sha_1 char(40) null,
-	obj_type TINYINT UNSIGNED null,
-	size BIGINT UNSIGNED null,
-	size_in_packfile BIGINT UNSIGNED null,
-	offset_in_pack BIGINT UNSIGNED null,
-	depth BIGINT UNSIGNED null,
-	base_sha_1 char(40) null
+ sha_1 char(40) null,
+ obj_type TINYINT UNSIGNED null,
+ size BIGINT UNSIGNED null,
+ size_in_packfile BIGINT UNSIGNED null,
+ offset_in_pack BIGINT UNSIGNED null,
+ depth BIGINT UNSIGNED null,
+ base_sha_1 char(40) null
 )
 comment 'git 对象索引';
 
 create table `blob`
 (
-	sha_1 char(40) null,
-	name varchar(256) null,
-	context text null,
-	file_type varchar(64) null
+ sha_1 char(40) null,
+ name varchar(256) null,
+ context text null,
+ file_type varchar(64) null
 );
 
 create table tree
 (
-	mode char(6) null,
-	type char(16) null,
-	sha_1 char(40) null,
-	filename char(128) null
+ mode char(6) null,
+ type char(16) null,
+ sha_1 char(40) null,
+ filename char(128) null
 );
 
 create table commit
 (
-	tree char(40) null,
-	author text null,
-	committer text null,
-	message text null
+ tree char(40) null,
+ author text null,
+ committer text null,
+ message text null
 );
 
 ```
